--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "bn.js": "^5.1.3",
     "commander": "^4.1.1",
     "fs-extra": "^8.1.0",
-    "js-yaml": "^3.14.0"
+    "js-yaml": "^3.14.0",
+    "@slack/web-api": "^6.7.1"
   },
   "devDependencies": {
     "@types/chai": "^4.3.0",
